# exemplar_flask

./: .gitignore  BUILD_VERSION.txt  README.md  fern_gen.sh  fernclient.sh  flaskclient.sh  opcclient.sh  opclient.sh  openapigen.sh  openapipythongen.sh  pyproject.toml
docker/: Dockerfile
fern/: fern.config.json  generators.yml
fernclient/: openapi.json
fernclient/python/: __init__.py  client.py
fernclient/typescript/: Client.ts  index.ts
openapi_client/: README.md  __init__.py  api_client.py  configuration.py  openapi.json  setup.py
openapi_client/api/: __init__.py  db_api.py
openapi_client/docs/: DbApi.md  Generated2.md  Generated5.md
openapi_client/models/: __init__.py  generated.py  generated3.py  generated5.py  test2_get_response.py  test2_post_request_json.py  test_get_response.py  test_post_request_json.py
openapi_client/openapi_client/: __init__.py  exceptions.py  rest.py
openapi_client/test/: test_generated.py  test_generated2.py  test_generated3.py  test_generated5.py
openapi_client_root/: README.md  openapi.json  pyproject.toml
openapi_client_root/docs/: DbApi.md  Error.md  Generated.md  Generated3.md  Test2GetResponse.md  Test2PostRequestJson.md  TestGetResponse.md  TestPostRequestJson.md
openapi_client_root/test/: test_db_api.py  test_error.py  test_pagination_metadata.py  test_test2_get_response.py  test_test2_post_request_json.py  test_test_get_response.py  test_test_post_request_json.py
openapi_python_client/: README.md  pyproject.toml
openapi_python_client/test_api_client/: __init__.py
src/exemplar_flask/: __init__.py  (+4 more)
(+51 files in other folders)
